fix scrollbar

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -68,6 +68,7 @@ h6 {
 
 ::-webkit-scrollbar {
     width: 6px;
+    height: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
